@@ -23,8 +23,8 @@ up to date.
 Once that is in place, you want to download the appropriate
 windows binary. From the pygame downloads page you can find the .EXE
 file you need. This will automatically install all of pygame and all the SDL
-dependencies. The windows binaries have filenames like this; "pygame-1.7.win32-py2.4.exe".
-This would be the installer for pygame version 1.7, for Python version 2.4. You
+dependencies. The windows binaries have filenames like this; "pygame-1.7.1.win32-py2.4.exe".
+This would be the installer for pygame version 1.7.1, for Python version 2.4. You
 shouldn't have trouble finding the correct binary from the "Windows" section
 of the download page.
 <a href=http://www.pygame.org/download.shtml>http://www.pygame.org/download.shtml</a>.
@@ -33,8 +33,8 @@ You will also probably want to install the windows documentation and
 installation package. This will add easy links to the different documentation
 and games that come with pygame. The installer for this is found
 next to the other windows binary downloads. The filename looks like this;
-"pygame-docs-1.7.exe". And this would install the documentation and
-examples for pygame-1.7.
+"pygame-docs-1.7.1.exe". And this would install the documentation and
+examples for pygame-1.7.1
 </p><p>
 One other thing the windows binaries are missing is the Numeric Python
 package. You can easily install this separately and it will allow you to use
